# PersonaCode

./: .gitignore  README.md  build.cake  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 41422609940f_initialize_db.py
config/: .flake8
config/docker-entrypoint-initdb.d/: init.sql
docs/: erd.md  postgres_naming_convention.md
infra/live/: root.hcl
infra/live/app/dev/: terragrunt.hcl
infra/modules/: .terraform.lock.hcl  terraform.tf
infra/modules/stacks/app/app_service_plan/: main.tf  variables.tf
services/django/: pytest.ini  requirements.txt
services/django/app/: manage.py
services/django/app/persona/: settings.py
services/django/features/: fetchMarketsCommand.feature  getGenresFromSpotify.feature  getMarketsFromSpotify.feature
services/django/music/migrations/: 0001_initial.py
services/django/music/models/: __init__.py  _base.py  album.py  album_external_urls.py  album_types.py  country.py  genre.py  image.py  source.py
services/django/music/serializers/: album_serializer.py
services/django/music/services/: __init__.py  spotify.py
services/django/music/types/: __init__.py  genre.py  market.py  spotify_credential.py
services/django/persona/: settings.py  wsgi.py
services/django/tests/: conftest.py  test_fetch_markets_command.py  test_get_genres_from_spotify.py  test_get_markets_from_spotify.py
services/django/tests/factories/: __init__.py  album_factory.py  artist_factory.py  genre_factory.py  market_factory.py  spotify_credential_factory.py
(+5 files in other folders)
